Add ML predictor, all 5 leagues, fix gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 # Python
 backend/venv/
 backend/__pycache__/
-backend/*.pyc
+backend/routers/__pycache__/
+**/__pycache__/
+**/*.pyc
 backend/.env
+backend/data/
 
 # Node
 frontend/node_modules/
