--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,7 +3,7 @@ uvicorn[standard]==0.32.0
 httpx==0.27.2
 python-dotenv==1.0.1
 sqlalchemy==2.0.35
-psycopg2-binary==2.9.9
+psycopg[binary]==3.2.3
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 bcrypt==4.0.1
